# app/Http/Controllers/Api/UserController.php
@@ -5,17 +5,43 @@ namespace App\Http\Controllers\Api;
 
 
 use App\Http\Controllers\Controller;
+use App\Http\Resources\UserResource;
+use App\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\DB;
 
 class UserController extends Controller
 {
     /**
+     * Create a new controller instance.
+     *
+     * @return void
+     */
+    public function __construct()
+    {
+        $this->middleware('auth:api');
+        $this->middleware('permission:user-list|user-create|user-edit|user-delete', ['only' => ['index', 'show']]);
+        $this->middleware('permission:user-create', ['only' => ['create', 'store']]);
+        $this->middleware('permission:user-edit', ['only' => ['edit', 'update']]);
+        $this->middleware('permission:user-delete', ['only' => ['destroy']]);
+    }
+
+    /**
      * @OA\Get(
      *     path="/api/users",
      *     tags={"User"},
-     *     summary="Get user",
-     *     description="Get the authenticated User",
-     *     operationId="me",
+     *     summary="All users",
+     *     description="Get users list",
+     *     operationId="userIndex",
+     *     @OA\Parameter(
+     *         name="page",
+     *         in="query",
+     *         description="Pagination page",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="int"
+     *         )
+     *     ),
      *     @OA\Response(
      *         response="default",
      *         description="successful operation"
@@ -27,14 +53,26 @@ class UserController extends Controller
      */
     public function index()
     {
-        //
+        $users = User::paginate(25);
+
+        return UserResource::collection($users);
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param \Illuminate\Http\Request $request
-     * @return \Illuminate\Http\Response
+     * @OA\Post(
+     *     path="/api/users",
+     *     tags={"User"},
+     *     summary="Store user",
+     *     description="Create user",
+     *     operationId="userStore",
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation"
+     *     ),
+     *     security={
+     *         {"api_key": {}}
+     *     },
+     * )
      */
     public function store(Request $request)
     {
@@ -42,14 +80,35 @@ class UserController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param int $id
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     *     path="/api/users/{id}",
+     *     tags={"User"},
+     *     summary="Show user",
+     *     description="Show user information",
+     *     operationId="userShow",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User ID",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation"
+     *     ),
+     *     security={
+     *         {"api_key": {}}
+     *     },
+     * )
      */
     public function show($id)
     {
-        //
+        $user = User::findOrFail($id);
+
+        return new UserResource($user);
     }
 
     /**
@@ -65,13 +124,36 @@ class UserController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param int $id
-     * @return \Illuminate\Http\Response
+     * @OA\Delete (
+     *     path="/api/users/{id}",
+     *     tags={"User"},
+     *     summary="Delete user",
+     *     description="Delete user information",
+     *     operationId="userDestroy",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User ID",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation"
+     *     ),
+     *     security={
+     *         {"api_key": {}}
+     *     },
+     * )
      */
     public function destroy($id)
     {
-        //
+        User::destroy($id);
+
+        DB::table('model_has_roles')->where('model_id', $id)->delete();
+
+        return response()->json(['message' => 'Successfully delete!']);
     }
 }
